--- a/config.json
+++ b/config.json
@@ -1,41 +1,36 @@
 {
-    "classifier": {
-        "baseline": {
-            "learning_rate": 1e-5,
-            "epochs": 3,
-            "batch_size": 8
-        }
-    },
-    "denoising": {
-        "ct": {
-            "learning_rate": 1e-4,
-            "epochs": 5,
-            "batch_size": 16
-        },
-        "labs": {
-            "learning_rate": 2e-5,
-            "epochs": 4,
-            "batch_size": 32
-        },
-        "ntm": {
-            "learning_rate": 3e-5,
-            "epochs": 4,
-            "batch_size": 16
-        },
+    "models": {
         "st": {
-            "learning_rate": 2e-5,
-            "epochs": 5,
-            "batch_size": 8
+            "wandb_project": "General-model-English",
+            "wandb_run": "Sent-ST",
+            "tokenizer_model": "bert-base-multilingual-cased",
+            "model_input_dim": 768,
+            "loss_function": "BCEWithLogitsLoss",
+            "optimizer": "Adam",
+            "learning_rate": 0.001,
+            "dataset_path": "./combined_data/Sent-Spacy/combined_data_en.ol",
+            "separator": "\t",
+            "text_column": "Sentence",
+            "label_column": "Label",
+            "batch_size": 32,
+            "num_epochs": 5,
+            "output_model_dir": "./Sent-ST-bert-model"
         },
-        "gmm-sbert": {
-            "learning_rate": 1e-4,
-            "epochs": 6,
-            "batch_size": 32
-        },
-        "gmm-mbert": {
-            "learning_rate": 1e-5,
-            "epochs": 3,
-            "batch_size": 16
+        "baseline": {
+            "wandb_project": "Baseline-English",
+            "wandb_run": "Baseline-Run",
+            "tokenizer_model": "xlm-roberta-base",
+            "model_input_dim": 768,
+            "loss_function": "CrossEntropyLoss",
+            "optimizer": "Adam",
+            "learning_rate": 0.00001,
+            "dataset_path": "./data/baseline_train.csv",
+            "separator": ",",
+            "text_column": "text",
+            "label_column": "label",
+            "batch_size": 16,
+            "num_epochs": 3,
+            "output_model_dir": "./Baseline-Model"
         }
     }
 }
