--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-
+torch>=2.0.0
+torchvision
+torchaudio
+transformers>=4.35.0
+datasets
+scikit-learn
+pandas
+numpy
+scipy
+matplotlib
+seaborn
+wandb
+tqdm
+json5
