--- a/config.json
+++ b/config.json
@@ -1,79 +1,77 @@
 {
     "models": {
         "st": {
-            "wandb_project": "General-model-English",
+            "wandb_project": "Denoising-model-English",
             "wandb_run": "Sent-ST",
             "tokenizer_model": "bert-base-multilingual-cased",
             "model_input_dim": 768,
             "loss_function": "BCEWithLogitsLoss",
             "optimizer": "Adam",
             "learning_rate": 0.001,
-            "dataset_path": "./combined_data/Sent-Spacy/combined_data_en.ol",
+            "dataset_path": "./200-token/combined_data_200_en.ol",
             "separator": "\t",
             "text_column": "Sentence",
             "label_column": "Label",
             "batch_size": 32,
             "num_epochs": 10,
             "early_stopping_patience": 3,
-            "output_model_dir": "./Sent-ST-bert-model"
+            "output_model_dir": "./Saved-Models/ST-model"
         },
         "baseline": {
-            "wandb_project": "Baseline-English",
-            "wandb_run": "Baseline-Run",
-            "tokenizer_model": "xlm-roberta-base",
+            "wandb_project": "Denoising-model-English",
+            "wandb_run": "Baseline-model",
+            "tokenizer_model": "bert-base-multilingual-cased",
             "model_input_dim": 768,
             "loss_function": "CrossEntropyLoss",
             "optimizer": "Adam",
             "learning_rate": 0.00001,
-            "dataset_path": "./data/baseline_train.csv",
+            "dataset_path": "./200-token/combined_data_200_en.ol",
             "separator": ",",
-            "text_column": "text",
+            "text_column": "Sentence",
             "label_column": "label",
             "batch_size": 16,
             "num_epochs": 10,
             "early_stopping_patience": 3,
-            "output_model_dir": "./Baseline-Model"
+            "output_model_dir": "./Saved-Models/Baseline-Model"
         },
         "label_smoothing": {
-            "wandb_project": "Label-Smoothing-Model",
-            "wandb_run": "Label-Smoothing-Transformer",
-            "tokenizer_model": "bert-base-uncased",
+            "wandb_project": "Denoising-model-English",
+            "wandb_run": "Label-Smoothing-model",
+            "tokenizer_model": "bert-base-multilingual-cased",
             "loss_function": "CrossEntropyLoss",
             "optimizer": "Adam",
             "learning_rate": 0.00005,
-            "dataset_path": "./data/label_smoothing_train.csv",
+            "dataset_path": "./200-token/combined_data_200_en.ol",
             "separator": "\t",
-            "text_column": "Clean_Text",
+            "text_column": "Sentence",
             "label_column": "Label",
             "batch_size": 32,
             "num_epochs": 10,
             "early_stopping_patience": 3,
             "smoothing_factor": 0.1,
-            "output_model_dir": "./Label-Smoothing-Model",
+            "output_model_dir": "./Saved-Models/Label-Smoothing-Model",
             "valsplit": 0.2,
-            "seed": 42,
-            "testfile": "./data/label_smoothing_test.csv"
+            "seed": 42
         
         },
         "ntm": {
-            "wandb_project": "Noise-Transition-Matrix",
+            "wandb_project": "Denoising-model-English",
             "wandb_run": "NTM-Training",
             "tokenizer_model": "bert-base-multilingual-cased",
             "loss_function": "CrossEntropyLoss",
             "optimizer": "AdamW",
             "learning_rate": 0.00002,
-            "dataset_path": "./combined_data/200-token/sbert_isnoisy_combined_data_200_fr.ol",
+            "dataset_path": "./200-token/combined_data_200_en.ol",
             "separator": "\t",
             "text_column": "Sentence",
             "label_column": "Label",
             "batch_size": 16,
             "num_epochs": 10,
             "early_stopping_patience": 3,
-            "output_model_dir": "./NTM-Model",
+            "output_model_dir": "./Saved-Models/NTM-Model",
             "valsplit": 0.2,
             "seed": 42,
-            "epsilon": 1e-6,
-            "testfile": "./data/ntm_test.csv"
+            "epsilon": 1e-6
         }
     }
 }
